overflow fix

--- a/src/subpages/kindsOfSleep/kindsOfSleep.css
+++ b/src/subpages/kindsOfSleep/kindsOfSleep.css
@@ -1,5 +1,6 @@
 #content {
     text-align: unset !important;
+    overflow-x: hidden !important;
 }
 
 .zoom {
